--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,6 +1,4 @@
 ---
-- name: Upgrade all packages
-  yum:
-    name: '*'
-    state: latest
-
+- name: Update all packages to the latest version
+  apt:
+    upgrade: dist
