--- a/site.yml
+++ b/site.yml
@@ -4,12 +4,13 @@
 #   roles:
 #     - common
 
-- hosts: db
-  remote_user: vagrant
-  roles:
-    - mysql
+# - hosts: db
+#   remote_user: vagrant
+#   roles:
+#     - mysql
 
 - hosts: web
   remote_user: vagrant
   roles:
+    - mysql
     - web
