--- a/roles/mysql/tasks/mysql.yml
+++ b/roles/mysql/tasks/mysql.yml
@@ -14,12 +14,6 @@
     enabled: true
   notify: restart mariadb
 
-# Removes all anonymous user accounts
-- mysql_user:
-    name: ''
-    host_all: yes
-    state: absent
-
 - name: Create new database 'wordpress'
   mysql_db:   
     name: "{{ wp_db_name }}"
@@ -28,5 +22,6 @@
 - mysql_user:
     name: "{{ wp_db_user }}"
     password: "{{ wp_db_password }}"
-    priv: '*.*:ALL,GRANT'
+    # priv: '*.*:ALL,GRANT'
+    priv: '*.*:ALL'
     state: present
