--- a/roles/mysql/tasks/mysql.yml
+++ b/roles/mysql/tasks/mysql.yml
@@ -1,27 +1,25 @@
 ---
-- name: Install Mariadb & needed packages
+- name: Install Mysql (mariadb) & MySQL-python
   yum:
-    name:
-      - mariadb
-      - mariadb-server
-      - MySQL-python
+    name: mariadb-server,mariadb,MySQL-python
     state: latest
 
+- name: Install libselinux-python
+  yum: name=libselinux-python state=present
+
+- name: Disable SElinux
+  selinux:
+    state: disabled
+
 - name: Ensure mariadb is running
-  service:
-    name: mariadb
+  systemd:
     state: started
-    enabled: true
+    enabled: yes
+    name: mariadb
   notify: restart mariadb
 
-- name: Create new database 'wordpress'
-  mysql_db:   
-    name: "{{ wp_db_name }}"
-    state: present
+- name: Create WordPress db user
+  mysql_user: name={{wp_db_user}} password={{wp_db_password}} priv={{wp_db_name}}.*:ALL host='%' state=present
 
-- mysql_user:
-    name: "{{ wp_db_user }}"
-    password: "{{ wp_db_password }}"
-    # priv: '*.*:ALL,GRANT'
-    priv: '*.*:ALL'
-    state: present
+- name: Create WordPress db
+  mysql_db: name={{wp_db_name}} state=present
